test/corpus/number.txt
===
Number. Sign in Expression is (unary)
===
class A
invariant
  (-1)
  (-.2)
end
---
(source_file
  (class_declaration (class_name)
    (invariant
      (assertion_clause
        (unlabeled_assertion_clause
          (expression
            (basic_expression
              (parenthesized
                (expression
                  (basic_expression
                    (operator_expression
                      (unary)
                      (expression (special_expression (integer_constant (integer))))))))))))
      (assertion_clause
        (unlabeled_assertion_clause
          (expression
            (basic_expression
              (parenthesized
                (expression
                  (basic_expression
                    (operator_expression
                      (unary)
                      (expression (special_expression (real_constant (real (integer))))))))))))))))

===
Number. Sign in Constant is (sign)
===
class A
feature
x: INTEGER = -1
end
---
(source_file
  (class_declaration (class_name)
    (features
      (feature_clause
        (feature_declaration
          (new_feature
            (extended_feature_name
              (identifier)))
          (class_type (class_name))
          (explicit_value
            (integer_constant
              (sign)
              (integer))))))))

===
Number. Real
===
class A
invariant
  -.3e-10
end
---
(source_file
  (class_declaration (class_name)
    (invariant
      (assertion_clause
        (unlabeled_assertion_clause
          (expression
            (basic_expression
              (operator_expression
                (unary)
                (expression
                  (special_expression
                    (real_constant
                      (real
                        (integer)
                        (real_exponent (sign) (integer))))))))))))))

===
Number. Integer
===
class A
invariant
  12
end
---
(source_file
  (class_declaration (class_name)
    (invariant
      (assertion_clause
        (unlabeled_assertion_clause
          (expression
            (special_expression (integer_constant (integer)))))))))
